# fxfill-analytics-observability

./: .attribution-replacements.txt  .env.example  .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  PROGRESS.md  README.md  README.zh-CN.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
config/: app.yml  data_generation.yml  experiments.yml  logging.yml  metrics.yml
dashboard/: Home.py
dbt_fxfill/: .user.yml  dbt_project.yml
reports/: phase1_final_audit.json  phase1_final_audit.md  phase2_coverage.json  phase2_final_audit.json  phase2_final_audit.md  phase2_gap_audit.md  phase2_model_inventory.json  phase2_model_inventory.md  phase2_performance.json  phase2_performance.md  phase2_reconciliation.json  phase2_reconciliation.md  phase2_sql_portfolio.json  phase2_sql_portfolio.md  phase2_warehouse_manifest.json  phase3_coverage.json  phase3_dashboard_manifest.json  phase3_final_audit.json  phase3_final_audit.md  phase3_performance.json  phase3_performance.md  phase3_raw_scan_audit.json  phase3_root_cause.json  phase3_streamlit_startup_diagnostic.json
scripts/: audit_public_release.py  benchmark_dashboard.py  build_warehouse.py  check_business_metric_integrity.py  check_dashboard_truthfulness.py  check_readme_bilingual_consistency.py  check_remaining_dashboard_pages.py  extract_root_cause.py  generate_data.py  generate_data_quality_snapshot.py  generate_p2_8_4_preflight.py  generate_phase1_audit.py  generate_phase2_audit.py  generate_phase2_evidence.py  generate_phase3_audit.py  generate_portfolio_diagrams.py  generate_reports.py  refresh_portfolio_screenshot_assets.py  render_acceptance_summary.py  run_all.ps1  run_api.ps1  run_dashboard.ps1  run_experiment_analysis.py  run_portfolio_demo.ps1  run_tests.ps1  setup.ps1  setup_portfolio.ps1  verify_core_release.py  verify_phase4_acceptance.py  verify_portfolio_release.py  verify_release_tag.py
(+264 files in other folders)
